--- a/Irydae/MainWindow.xaml
+++ b/Irydae/MainWindow.xaml
@@ -83,6 +83,22 @@
                     <Image Stretch="Fill" Width="{Binding Path=ActualWidth, ElementName=CanvasMap}" Height="{Binding Path=ActualHeight, ElementName=CanvasMap}" Source="Images/Cartedumondesujet2.png" Canvas.Top="0" Canvas.Left="0"/>
                     <Ellipse MouseLeftButtonDown="Canvas_OnMouseLeftButtonDown" MouseLeftButtonUp="UIElement_OnMouseLeftButtonUp" MouseMove="UIElement_OnMouseMove" Visibility="{Binding PersonnageInfo.SelectedPeriode, Converter={ressources:NullToVisibilityConverter}}" Width="20" Height="20" Fill="Black" Stroke="White" StrokeThickness="1" Canvas.Top="{Binding PersonnageInfo.SelectedPeriode.Position.Y}" Canvas.Left="{Binding PersonnageInfo.SelectedPeriode.Position.X}"/>
                 </Canvas>
+                <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" BorderBrush="Black" Margin="0 10 0 0" BorderThickness="0 1 0 0">
+                    <StackPanel HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Top">
+                        <StackPanel.Resources>
+                            <Style TargetType="TextBox">
+                                <Setter Property="Margin" Value="5"/>
+                            </Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Margin" Value="5"/>
+                                <Setter Property="Padding" Value="5"/>
+                                <Setter Property="Height" Value="36"/>
+                            </Style>
+                        </StackPanel.Resources>
+                        <Button Command="{Binding SaveDataCommand}">Sauver</Button>
+                        <Button Command="{Binding GenerateHtmlCommand}">Générer le code</Button>
+                    </StackPanel>
+                </Border>
             </Grid>
         </Grid>
     </DockPanel>
