--- a/Irydae/Views/RpUserControl.xaml
+++ b/Irydae/Views/RpUserControl.xaml
@@ -9,6 +9,7 @@
         <Grid.Resources>
             <Style TargetType="TextBox">
                 <Setter Property="Margin" Value="5"/>
+                <Setter Property="Width" Value="150"/>
             </Style>
             <Style TargetType="Button">
                 <Setter Property="Margin" Value="5"/>
