--- a/Irydae/MainWindow.xaml
+++ b/Irydae/MainWindow.xaml
@@ -46,6 +46,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="48"/>
                         <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <StackPanel Grid.Row="0" Orientation="Horizontal">
                         <Button Margin="5, 0" Click="ShowAddPeriodeDialog">Ajouter une période</Button>
@@ -66,6 +67,20 @@
                             <views:PartenaireUserControl DataContext="{Binding PersonnageInfo.SelectedPartenaire}"/>
                         </Grid>
                     </StackPanel>
+                    <Border Grid.Row="2" BorderBrush="Black" Margin="0 10 0 0" BorderThickness="0 1 0 0">
+                        <StackPanel HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Top">
+                            <StackPanel.Resources>
+                                <Style TargetType="Button">
+                                    <Setter Property="Margin" Value="5"/>
+                                    <Setter Property="Padding" Value="5"/>
+                                    <Setter Property="Height" Value="36"/>
+                                </Style>
+                            </StackPanel.Resources>
+                            <Button Command="{Binding SaveDataCommand}">Sauver</Button>
+                            <Button Command="{Binding GenerateHtmlCommand}">Prévisualiser</Button>
+                            <Button Command="{Binding DisplayResultCommand}">Afficher le code</Button>
+                        </StackPanel>
+                    </Border>
                 </Grid>
             </Border>
             <Grid Grid.Column="1">
@@ -83,22 +98,6 @@
                     <Image Stretch="Fill" Width="{Binding Path=ActualWidth, ElementName=CanvasMap}" Height="{Binding Path=ActualHeight, ElementName=CanvasMap}" Source="Images/Cartedumondesujet2.png" Canvas.Top="0" Canvas.Left="0"/>
                     <Ellipse MouseLeftButtonDown="Canvas_OnMouseLeftButtonDown" MouseLeftButtonUp="UIElement_OnMouseLeftButtonUp" MouseMove="UIElement_OnMouseMove" Visibility="{Binding PersonnageInfo.SelectedPeriode, Converter={ressources:NullToVisibilityConverter}}" Width="20" Height="20" Fill="Black" Stroke="White" StrokeThickness="1" Canvas.Top="{Binding PersonnageInfo.SelectedPeriode.Position.Y}" Canvas.Left="{Binding PersonnageInfo.SelectedPeriode.Position.X}"/>
                 </Canvas>
-                <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" BorderBrush="Black" Margin="0 10 0 0" BorderThickness="0 1 0 0">
-                    <StackPanel HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Top">
-                        <StackPanel.Resources>
-                            <Style TargetType="TextBox">
-                                <Setter Property="Margin" Value="5"/>
-                            </Style>
-                            <Style TargetType="Button">
-                                <Setter Property="Margin" Value="5"/>
-                                <Setter Property="Padding" Value="5"/>
-                                <Setter Property="Height" Value="36"/>
-                            </Style>
-                        </StackPanel.Resources>
-                        <Button Command="{Binding SaveDataCommand}">Sauver</Button>
-                        <Button Command="{Binding GenerateHtmlCommand}">Générer le code</Button>
-                    </StackPanel>
-                </Border>
             </Grid>
         </Grid>
     </DockPanel>
