--- a/Irydae/Ressources/StyleDictionary.xaml
+++ b/Irydae/Ressources/StyleDictionary.xaml
@@ -14,6 +14,27 @@
         <Setter Property="BorderBrush" Value="#838b92" />
     </Style>
 
+    <Style x:Key="{x:Type Label}" TargetType="Label">
+        <Setter Property="Height" Value="24"/>
+        <Setter Property="HorizontalContentAlignment" Value="Right"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="5"/>
+    </Style>
+
+    <Style x:Key="{x:Type TextBox}" TargetType="TextBox">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Width" Value="150"/>
+        <Setter Property="Height" Value="24"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+    </Style>
+
+    <Style x:Key="{x:Type DatePicker}" TargetType="DatePicker">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Width" Value="150"/>
+        <Setter Property="Height" Value="24"/>
+    </Style>
+
     <Style x:Key="BaseListBox" TargetType="{x:Type ListBox}">
         <Setter Property="MinHeight" Value="110" />
         <Setter Property="Template">
