--- a/Irydae/Views/AddPartenaireDialog.xaml
+++ b/Irydae/Views/AddPartenaireDialog.xaml
@@ -9,17 +9,12 @@
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner" 
         FocusManager.FocusedElement="{Binding ElementName=NameInput}">
+    <Border Padding="10">
     <Grid>
         <Grid.Resources>
-            <Style TargetType="TextBox">
-                <Setter Property="Margin" Value="5"/>
-            </Style>
             <Style TargetType="Button">
                 <Setter Property="Margin" Value="5"/>
                 <Setter Property="Padding" Value="5"/>
-            </Style>
-            <Style TargetType="Label">
-                <Setter Property="Margin" Value="5"/>
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
@@ -45,4 +40,5 @@
             <Button Name="AddButton" IsDefault="True" Click="AddAndClose">OK</Button>
         </StackPanel>
     </Grid>
+    </Border>
 </Window>
