--- a/Irydae/Views/AddRpDialog.xaml
+++ b/Irydae/Views/AddRpDialog.xaml
@@ -9,40 +9,36 @@
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner" 
         FocusManager.FocusedElement="{Binding ElementName=NameInput}">
-    <Grid>
-        <Grid.Resources>
-            <Style TargetType="TextBox">
-                <Setter Property="Margin" Value="5"/>
-            </Style>
-            <Style TargetType="Button">
-                <Setter Property="Margin" Value="5"/>
-                <Setter Property="Padding" Value="5"/>
-            </Style>
-            <Style TargetType="Label">
-                <Setter Property="Margin" Value="5"/>
-            </Style>
-        </Grid.Resources>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-        <StackPanel Orientation="Vertical">
-            <Label HorizontalContentAlignment="Right" Content="Titre * : "/>
-            <Label HorizontalContentAlignment="Right" Content="Url * : "/>
-        </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
-            <TextBox Name="TitreInput"/>
-            <TextBox Name="UrlInput"/>
-        </StackPanel>
-        <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
-            <Button Click="Cancel" Name="CancelButton" IsCancel="True">Annuler</Button>
-            <Button Name="AddAnotherButton" Click="AddAndContinue">Ajouter un autre</Button>
-            <Button Name="AddPartenaire" Click="AddAndAddPartenaire">Ajouter et ajouter un partenaire</Button>
-            <Button Name="AddButton" IsDefault="True" Click="AddAndClose">OK</Button>
-        </StackPanel>
-    </Grid>
+    <Border Padding="10">
+        <Grid>
+            <Grid.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Margin" Value="5"/>
+                    <Setter Property="Padding" Value="5"/>
+                </Style>
+            </Grid.Resources>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Vertical">
+                <Label HorizontalContentAlignment="Right" Content="Titre * : "/>
+                <Label HorizontalContentAlignment="Right" Content="Url * : "/>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                <TextBox Name="TitreInput"/>
+                <TextBox Name="UrlInput"/>
+            </StackPanel>
+            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
+                <Button Click="Cancel" Name="CancelButton" IsCancel="True">Annuler</Button>
+                <Button Name="AddAnotherButton" Click="AddAndContinue">Ajouter un autre</Button>
+                <Button Name="AddPartenaire" Click="AddAndAddPartenaire">Ajouter et ajouter un partenaire</Button>
+                <Button Name="AddButton" IsDefault="True" Click="AddAndClose">OK</Button>
+            </StackPanel>
+        </Grid>
+    </Border>
 </Window>
