--- a/Irydae/Views/RpUserControl.xaml
+++ b/Irydae/Views/RpUserControl.xaml
@@ -7,16 +7,9 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.Resources>
-            <Style TargetType="TextBox">
-                <Setter Property="Margin" Value="5"/>
-                <Setter Property="Width" Value="150"/>
-            </Style>
             <Style TargetType="Button">
                 <Setter Property="Margin" Value="5"/>
                 <Setter Property="Padding" Value="5"/>
-            </Style>
-            <Style TargetType="Label">
-                <Setter Property="Margin" Value="5"/>
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
@@ -24,12 +17,12 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical">
-            <Label HorizontalContentAlignment="Right" Content="Titre * : "/>
-            <Label HorizontalContentAlignment="Right" Content="Url * : "/>
+            <Label Content="Titre * : "/>
+            <Label Content="Url * : "/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
             <TextBox Name="TitreInput" Text="{Binding Titre}"/>
