--- a/Irydae/Views/AddPartenaireDialog.xaml
+++ b/Irydae/Views/AddPartenaireDialog.xaml
@@ -22,8 +22,8 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical">
             <Label HorizontalContentAlignment="Right" Content="Nom * : "/>
