--- a/Irydae/Views/PartenaireUserControl.xaml
+++ b/Irydae/Views/PartenaireUserControl.xaml
@@ -5,28 +5,31 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Grid.Resources>
-            <Style TargetType="Button">
-                <Setter Property="Margin" Value="5"/>
-                <Setter Property="Padding" Value="5"/>
-            </Style>
-        </Grid.Resources>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <StackPanel Orientation="Vertical">
-            <Label HorizontalContentAlignment="Right" Content="Nom * : "/>
-            <Label HorizontalContentAlignment="Right" Content="Groupe * : "/>
-        </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
-            <TextBox Name="NameInput" Text="{Binding Nom}"/>
-            <TextBox Name="GroupeInput" Text="{Binding Groupe}"/>
-        </StackPanel>
-    </Grid>
+    <GroupBox Margin="5" Padding="5">
+        <GroupBox.Header>Partenaire</GroupBox.Header>
+        <Grid>
+            <Grid.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Margin" Value="5"/>
+                    <Setter Property="Padding" Value="5"/>
+                </Style>
+            </Grid.Resources>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Vertical">
+                <Label HorizontalContentAlignment="Right" Content="Nom * : "/>
+                <Label HorizontalContentAlignment="Right" Content="Groupe * : "/>
+            </StackPanel>
+            <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
+                <TextBox Name="NameInput" Text="{Binding Nom}"/>
+                <TextBox Name="GroupeInput" Text="{Binding Groupe}"/>
+            </StackPanel>
+        </Grid>
+    </GroupBox>
 </UserControl>
