--- a/Irydae/Views/PeriodeUserControl.xaml
+++ b/Irydae/Views/PeriodeUserControl.xaml
@@ -5,30 +5,33 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Grid.Resources>
-            <Style TargetType="Button">
-                <Setter Property="Margin" Value="5"/>
-                <Setter Property="Padding" Value="5"/>
-            </Style>
-        </Grid.Resources>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <StackPanel Orientation="Vertical">
-            <Label HorizontalContentAlignment="Right" Content="Lieu : "/>
-            <Label HorizontalContentAlignment="Right" Content="Date de début : "/>
-            <Label HorizontalContentAlignment="Right" Content="Date de fin : "/>
-        </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
-            <TextBox Grid.Column="1" Name="LieuInput" Text="{Binding Lieu}"/>
-            <DatePicker Grid.Column="1" Name="StartDatePicker" SelectedDate="{Binding DateDebut}" DisplayDate="{Binding DateDebut}" DisplayDateStart="{Binding DateDebut}"/>
-            <DatePicker Grid.Column="1" Name="EndDatePicker" SelectedDate="{Binding DateFin}" DisplayDate="{Binding DateFin}" DisplayDateStart="{Binding DateFin}"/>
-        </StackPanel>
-    </Grid>
+    <GroupBox Margin="5" Padding="5">
+        <GroupBox.Header>Période</GroupBox.Header>
+        <Grid>
+            <Grid.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Margin" Value="5"/>
+                    <Setter Property="Padding" Value="5"/>
+                </Style>
+            </Grid.Resources>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Vertical">
+                <Label HorizontalContentAlignment="Right" Content="Lieu * : "/>
+                <Label HorizontalContentAlignment="Right" Content="Date de début * : "/>
+                <Label HorizontalContentAlignment="Right" Content="Date de fin : "/>
+            </StackPanel>
+            <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
+                <TextBox Grid.Column="1" Name="LieuInput" Text="{Binding Lieu}"/>
+                <DatePicker Grid.Column="1" Name="StartDatePicker" SelectedDate="{Binding DateDebut}" DisplayDate="{Binding DateDebut}" DisplayDateStart="{Binding DateDebut}"/>
+                <DatePicker Grid.Column="1" Name="EndDatePicker" SelectedDate="{Binding DateFin}" DisplayDate="{Binding DateFin}" DisplayDateStart="{Binding DateFin}"/>
+            </StackPanel>
+        </Grid>
+    </GroupBox>
 </UserControl>
