--- a/Irydae/Views/AddPeriodeDialog.xaml
+++ b/Irydae/Views/AddPeriodeDialog.xaml
@@ -33,8 +33,8 @@
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center">
                 <TextBox Name="LieuInput" />
-                <DatePicker Name="StartDatePicker" DisplayDate="1/1/933" DisplayDateStart="1/1/933"/>
-                <DatePicker Name="EndDatePicker" DisplayDate="1/1/933" DisplayDateStart="1/1/933"/>
+                <DatePicker Name="StartDatePicker" DisplayDate="1/1/933" />
+                <DatePicker Name="EndDatePicker" DisplayDate="1/1/933"/>
             </StackPanel>
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
                 <Button Click="Cancel" Name="CancelButton" IsCancel="True">Annuler</Button>
