--- a/Irydae/Views/AddPartenaireDialog.xaml
+++ b/Irydae/Views/AddPartenaireDialog.xaml
@@ -1,6 +1,9 @@
 ﻿<Window x:Class="Irydae.Views.AddPartenaireDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
+        xmlns:model="clr-namespace:Irydae.Model"
+        xmlns:ressources="clr-namespace:Irydae.Ressources"
         Title="Ajouter un partenaire"
         Height="190"
         MinHeight="10"
@@ -9,6 +12,16 @@
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner" 
         FocusManager.FocusedElement="{Binding ElementName=NameInput}">
+    <Window.Resources>
+        <ObjectDataProvider MethodName="GetValues"
+                ObjectType="{x:Type sys:Enum}"
+                x:Key="MyEnumValues">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="model:Groupe" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+        <ressources:AmbientValueConverter x:Key="AmbientValueConverter"/>
+    </Window.Resources>
     <Border Padding="10">
         <Grid>
             <Grid.RowDefinitions>
@@ -25,8 +38,14 @@
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
             <TextBox Name="NameInput"/>
-            <TextBox Name="GroupeInput"/>
-        </StackPanel>
+                <ComboBox ItemsSource="{Binding Source={StaticResource MyEnumValues}}" Name="GroupeComboBox">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=., Converter={StaticResource AmbientValueConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </StackPanel>
         
         <StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
             <Button Click="Cancel" Name="CancelButton" IsCancel="True">Annuler</Button>
