--- a/Irydae/Views/PartenaireUserControl.xaml
+++ b/Irydae/Views/PartenaireUserControl.xaml
@@ -2,9 +2,22 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             xmlns:model="clr-namespace:Irydae.Model"
+             xmlns:ressources="clr-namespace:Irydae.Ressources"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <ObjectDataProvider MethodName="GetValues"
+                ObjectType="{x:Type sys:Enum}"
+                x:Key="MyEnumValues">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="model:Groupe" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+        <ressources:AmbientValueConverter x:Key="AmbientValueConverter"/>
+    </UserControl.Resources>
     <GroupBox Margin="5" Padding="5">
         <GroupBox.Header>Partenaire</GroupBox.Header>
         <Grid>
@@ -28,7 +41,14 @@
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
                 <TextBox Name="NameInput" Text="{Binding Nom}"/>
-                <TextBox Name="GroupeInput" Text="{Binding Groupe}"/>
+                <ComboBox ItemsSource="{Binding Source={StaticResource MyEnumValues}}" SelectedItem="{Binding Groupe}" Name="GroupeComboBox">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=., Converter={StaticResource AmbientValueConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <!--<TextBox Name="GroupeInput" Text="{Binding Groupe}"/>-->
             </StackPanel>
         </Grid>
     </GroupBox>
