--- a/Irydae/Views/PeriodeUserControl.xaml
+++ b/Irydae/Views/PeriodeUserControl.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <GroupBox Margin="5" Padding="5">
@@ -28,9 +29,9 @@
                 <Label HorizontalContentAlignment="Right" Content="Date de fin : "/>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="0">
-                <TextBox Grid.Column="1" Name="LieuInput" Text="{Binding Lieu}"/>
-                <DatePicker Grid.Column="1" Name="StartDatePicker" SelectedDate="{Binding DateDebut}" DisplayDate="{Binding DateDebut}"/>
-                <DatePicker Grid.Column="1" Name="EndDatePicker" SelectedDate="{Binding DateFin}" DisplayDate="{Binding DateFin}" />
+                <TextBox Name="LieuInput" Text="{Binding Lieu}"/>
+                <DatePicker Name="StartDatePicker" SelectedDate="{Binding DateDebut, UpdateSourceTrigger=PropertyChanged}"/>
+                <DatePicker Name="EndDatePicker" SelectedDate="{Binding DateFin, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </Grid>
     </GroupBox>
