--- a/Irydae/Ressources/StyleDictionary.xaml
+++ b/Irydae/Ressources/StyleDictionary.xaml
@@ -67,6 +67,10 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
     
+    <Style x:Key="DefaultMenuItem" TargetType="{x:Type MenuItem}">
+        <Setter Property="IsCheckable" Value="False"/>
+    </Style>
+    
     <Style x:Key="{x:Type CheckBox}" TargetType="{x:Type CheckBox}">
         <Setter Property="Height" Value="24"/>
         <Setter Property="Margin" Value="5"/>
