--- a/Irydae/MainWindow.xaml
+++ b/Irydae/MainWindow.xaml
@@ -29,11 +29,6 @@
                         <Setter Property="CommandParameter" Value="{Binding}"/>
                         <Setter Property="IsCheckable" Value="True"/>
                         <Setter Property="IsChecked" Value="{Binding Selected}"/>
-                        <!--<Setter Property="Icon">
-                            <Setter.Value>
-                                <TextBlock Width="20" Height="20" Text="X" Visibility="{Binding Selected, Converter={ressources:BoolToVisibilityConverter}}"/>
-                            </Setter.Value>
-                        </Setter>-->
                     </Style>
                 </MenuItem.ItemContainerStyle>
             </MenuItem>
@@ -106,10 +101,12 @@
                     <Canvas ClipToBounds="True" Grid.Column="1" Grid.Row="1" Width="650" Height="650" Name="CanvasMap">
                         <Image MouseLeftButtonDown="ImageMap_OnMouseDown" MouseLeftButtonUp="ImageMap_OnMouseLeftButtonUp" MouseMove="ImageMap_OnMouseMove" MouseWheel="ImageMap_OnMouseWheel" Name="ImageMap" Stretch="Fill" Width="{Binding Path=ActualWidth, ElementName=CanvasMap}" Height="{Binding Path=ActualHeight, ElementName=CanvasMap}" Source="Images/Cartedumondesujet2.png" Canvas.Top="0" Canvas.Left="0">
                             <Image.RenderTransform>
-                                <TransformGroup>
-                                    <ScaleTransform ScaleX="{Binding CurrentZoom}" ScaleY="{Binding CurrentZoom}"/>
-                                    <TranslateTransform X="{Binding CurrentPanX}" Y="{Binding CurrentPanY}"/>
-                                </TransformGroup>
+                                <MatrixTransform/>
+                                <!--<MatrixTransform>
+                                    <MatrixTransform.Matrix>
+                                        <Matrix M11="{Binding CurrentZoom}" M22="{Binding CurrentZoom}" OffsetX="{Binding CurrentPanX}" OffsetY="{Binding CurrentPanY}"/>
+                                    </MatrixTransform.Matrix>
+                                </MatrixTransform>-->
                             </Image.RenderTransform>
                         </Image>
                         <Ellipse MouseLeftButtonDown="Canvas_OnMouseLeftButtonDown" MouseLeftButtonUp="UIElement_OnMouseLeftButtonUp" MouseMove="UIElement_OnMouseMove" Visibility="{Binding PersonnageInfo.SelectedPeriode, Converter={ressources:NullToVisibilityConverter}}" Width="20" Height="20" Fill="Black" Stroke="White" StrokeThickness="1" Canvas.Top="{Binding PersonnageInfo.SelectedPeriode.Position.Y}" Canvas.Left="{Binding PersonnageInfo.SelectedPeriode.Position.X}"/>
